
## Modified functions:

* partialResp
- fixed bug when only one variable in model
- polygon instead of lines for confidence interval
- new argument se.mult, default 1.96 for the 95% confidence interval, but can be changed e.g. to 1 (for just the SE) or 0 (for no CI)
- initial plot with type="n" and points added if plot.points=TRUE, removing boilerplate code

* getRegion
- before geodist(), project to EPSG:4326 if !is.lonlat

* selectAbsences
- moved "Absences not enough..." section upwards, avoiding unnecessary remaining computations

* distPres
- removed double loop to increase efficiency
- new default method "auto"
- option to use faster methods like haversine and cosine distance if packageVersion("terra") >= "1.8.7"


===============================================
fuzzySim v4.30 (committed 2024-12-16)
===============================================

## New functions:

* partialResp


## Modified functions:

* getRegion
- use geodist::geodist instead of terra::distance (faster)
- added 'dist_measure' argument for geodist


===============================================
fuzzySim v4.29 (committed 2024-12-12) -> CRAN
===============================================

## Modified functions:

* getRegion
- added 'dist_mat' argument
- changed default 'weight' to FALSE, as it looked too restrictive


===============================================
fuzzySim v4.28 (committed 2024-12-05)
===============================================

## Modified functions:

* cleanCoords
- added 'extend' argument, default 0.1 to increase the output plot extent by 10% of the input coordinates range


===============================================
fuzzySim v4.27 (committed 2024-11-22)
===============================================

## Modified functions:

* fuzzyOverlay
- fixed bug for raster inputs with NA pixels (reported by Jakub Nowosad: https://github.com/AMBarbosa/fuzzySim/issues/2#issue-2679366909)


## Other modified files:

* getRegion.Rd
- added examples

* selectAbsences.Rd